--- a/app/src/main/res/layout/activity_odds.xml
+++ b/app/src/main/res/layout/activity_odds.xml
@@ -5,7 +5,9 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".OddsActivity">
+    tools:context=".OddsActivity"
+    android:background="@drawable/background_odds"
+    >
 
     <TextView
         android:id="@+id/textViewSportTitleHeader"
