--- a/app/src/main/res/layout/activity_odds.xml
+++ b/app/src/main/res/layout/activity_odds.xml
@@ -9,6 +9,18 @@
     android:background="@drawable/background_odds"
     >
 
+    <ImageView
+        android:id="@+id/imageViewCountryIcon"
+        android:layout_width="90dp"
+        android:layout_height="90dp"
+        android:layout_marginEnd="8dp"
+        android:src="@drawable/country"
+        app:layout_constraintTop_toTopOf="@id/textViewSportTitleHeader"
+        app:layout_constraintBottom_toBottomOf="@id/textViewSportTitleHeader"
+        app:layout_constraintEnd_toStartOf="@id/textViewSportTitleHeader"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintHorizontal_bias="0.8" />
+
     <TextView
         android:id="@+id/textViewSportTitleHeader"
         android:layout_width="wrap_content"
@@ -20,11 +32,23 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:text="Título Deporte" />
 
+    <ImageView
+        android:id="@+id/imageViewLeagueIcon"
+        android:layout_width="wrap_content"
+        android:layout_height="90dp"
+        android:layout_marginStart="8dp"
+        android:src="@drawable/league"
+        app:layout_constraintTop_toTopOf="@id/textViewSportTitleHeader"
+        app:layout_constraintBottom_toBottomOf="@id/textViewSportTitleHeader"
+        app:layout_constraintStart_toEndOf="@id/textViewSportTitleHeader"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.2" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewOdds"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="25dp"
         app:layout_constraintTop_toBottomOf="@id/textViewSportTitleHeader"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
